--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <div class="absolute inset-0 w-full h-full bg-gradient-to-r from-data-accent to-data-purple opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
                     <span class="relative group-hover:text-white transition-colors">My Professional Journey</span>
                 </a>
-                <a href="YOUR_RESUME.pdf" target="_blank" class="px-8 py-3 glass-card text-white font-semibold rounded-lg hover:bg-white/10 transition-all border border-white/20">
+                <a href="Vipul_Sureka_Data_Analyst_5Years.pdf" target="_blank" class="px-8 py-3 glass-card text-white font-semibold rounded-lg hover:bg-white/10 transition-all border border-white/20">
                     My Resume
                 </a>
             </div>
