--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <!-- About Section -->
 <section id="about" class="py-20 relative">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="grid grid-cols-1 md:grid-cols-[1.7fr_1.3fr] gap-12 items-center">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center">
        <div class="reveal">
         <h2 class="text-3xl md:text-4xl font-bold mb-6">About Me</h2>
         <div class="h-1 w-20 bg-data-accent rounded mb-6"></div>
@@ -227,7 +227,7 @@
         </div>
       </div>
       
-      <div class="reveal relative">
+     <div class="reveal relative flex justify-end">
         <!-- Abstract Data Representation -->
         <div class="glass-card p-8 rounded-2xl relative z-10 animate-float">
           <div class="flex items-center justify-between mb-4 border-b border-gray-700 pb-2">
