--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <!-- About Section -->
 <section id="about" class="py-20 relative">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-    <div class="grid grid-cols-1 md:grid-cols-[3fr_2fr] gap-12 items-center">
+    <div class="grid grid-cols-1 md:grid-cols-[1fr_auto] gap-12 items-center">
        <div class="reveal">
         <h2 class="text-3xl md:text-4xl font-bold mb-6">About Me</h2>
         <div class="h-1 w-20 bg-data-accent rounded mb-6"></div>
