--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <h2 class="text-3xl md:text-4xl font-bold mb-6">About Me</h2>
         <div class="h-1 w-20 bg-data-accent rounded mb-6"></div>
         
-        <p class="text-gray-300 text-base leading-relaxed mb-6">
+        <p class="text-gray-300 text-[14px] leading-relaxed mb-6">
           Hi there, I'm Vipul, a consultant at Deloitte India, where I have gained extensive experience over the past five years. During this time, I have been dedicated to delivering data-driven solutions to prominent FMCG clients across the globe.<br>
           In my role, I collaborate closely with teams from diverse backgrounds to solve data driven problems for helping businesses make better decisions. I take pride in my strong communication skills and my ability to streamline complex business processes, ensuring efficient operations.<br>
           I help clients turn their data into insights. I create stunning dashboards and reports that make data easy to understand and use.<br>
