--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
     </section>
 
-    <!-- About Section -->
+   <!-- About Section -->
 <section id="about" class="py-20 relative">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="grid grid-cols-1 md:grid-cols-[1fr_auto] gap-12 items-start">
@@ -207,7 +207,7 @@
       <div class="reveal">
         <h2 class="text-3xl md:text-4xl font-bold mb-6">About Me</h2>
         <div class="h-1 w-20 bg-data-accent rounded mb-6"></div>
-        
+
         <p class="text-gray-300 text-[14px] leading-relaxed mb-6">
           Hi there, I'm Vipul, a consultant at Deloitte India, where I have gained extensive experience over the past five years. During this time, I have been dedicated to delivering data-driven solutions to prominent FMCG clients across the globe.<br><br>
           In my role, I collaborate closely with teams from diverse backgrounds to solve data driven problems for helping businesses make better decisions. I take pride in my strong communication skills and my ability to streamline complex business processes, ensuring efficient operations.<br><br>
@@ -220,7 +220,7 @@
           In my free time I like playing music and playing sports. Cricket, table-tennis and badminton are my favorites.<br><br>
           Please feel free to reach out if you're looking for data-driven problem solver or a game of cricket :)
         </p>
-        
+
         <!-- Skills -->
         <div class="flex flex-wrap gap-3 mt-4">
           <span class="px-3 py-1 rounded bg-slate-800 border border-slate-700 text-sm font-mono text-gray-300">Problem Solver</span>
@@ -229,13 +229,15 @@
         </div>
       </div>
 
-      <!-- Right Column -->
+      <!-- Right Column (Profile Pic + JSON) -->
       <div class="reveal relative ml-2 flex flex-col justify-start" style="margin-top: 404px;">
 
         <!-- Profile Picture -->
-        <img src="profile.png" alt="Profile Picture" class="w-32 h-32 rounded-full mb-6 mx-auto">
+        <img src="https://raw.githubusercontent.com/Vipul-Sureka/resume/main/dp.png"
+             alt="Profile Picture"
+             class="w-32 h-32 rounded-full mb-6 mx-auto shadow-lg border-2 border-data-accent">
 
-        <!-- Abstract Data Representation (JSON box) -->
+        <!-- Abstract Data Representation -->
         <div class="glass-card p-8 rounded-2xl relative z-10 animate-float" style="min-width: 220px; max-width: 300px;">
           <div class="flex items-center justify-between mb-4 border-b border-gray-700 pb-2">
             <span class="font-mono text-sm text-gray-400">profile_stats.json</span>
@@ -272,6 +274,7 @@
     </div>
   </div>
 </section>
+
 
 
     <!-- Skills Section -->
