--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="h-1 w-20 bg-data-accent rounded mb-6"></div>
         
         <p class="text-gray-300 text-[14px] leading-relaxed mb-6">
-          Hi there, I'm Vipul, a consultant at Deloitte India, where I have gained extensive experience over the past five years. During this time, I have been dedicated to delivering data-driven solutions to prominent FMCG clients across the globe.<br><br>
+          Hi there, I'm Vipul, a Consultant at Deloitte India, where I have gained extensive experience over the past five years. During this time, I have been dedicated to delivering data-driven solutions to prominent FMCG clients across the globe.<br><br>
           In my role, I collaborate closely with teams from diverse backgrounds to solve data driven problems for helping businesses make better decisions. I take pride in my strong communication skills and my ability to streamline complex business processes, ensuring efficient operations.<br><br>
           I help clients turn their data into insights. I create stunning dashboards and reports that make data easy to understand and use.<br>
           One of the aspects of my job that I find most enjoyable is the opportunity to work with multicultural teams and gain insights from different perspectives. Through collaborating with professionals from various parts of the world, I have come to appreciate the importance of global viewpoints and the richness that diversity brings.<br><br>
@@ -234,7 +234,7 @@
         <!-- Profile Picture -->
         <img src="https://raw.githubusercontent.com/Vipul-Sureka/resume/main/dp.png" 
              alt="Profile Pic" 
-             class="w-70 h-70 rounded-full mb-10 mx-auto md:mx-0 transform translate-x-2" 
+             class="w-70 h-70 rounded-full mb-10 mx-auto md:mx-0 transform translate-x-12" 
              style="margin-top: -100px;">
 
         <!-- Abstract Data Representation -->
