--- a/index.html
+++ b/index.html
@@ -168,28 +168,50 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="relative h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8 overflow-hidden">
-        <div class="text-center max-w-4xl mx-auto z-10">
-            <div class="inline-block mb-4 px-4 py-1 rounded-full glass-card border border-data-accent/30">
-                <span class="text-data-accent font-mono text-sm"><i class="fas fa-circle text-[8px] animate-pulse mr-2"></i>Available for new challenges</span>
-            </div>
-            <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-6">
-                Turning Raw Data into <br>
-                <span class="text-gradient">Strategic Intelligence</span>
-            </h1>
-            <p class="mt-4 max-w-2xl mx-auto text-xl text-gray-300 font-light">
-                Turning Raw Data into Strategic Intelligence.
-            </p>
-            <div class="mt-10 flex justify-center gap-4">
-                <a href="#experience" class="group relative px-8 py-3 bg-white text-black font-bold rounded-lg overflow-hidden transition-all hover:scale-105">
-                    <div class="absolute inset-0 w-full h-full bg-gradient-to-r from-data-accent to-data-purple opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
-                    <span class="relative group-hover:text-white transition-colors">My Professional Journey</span>
-                </a>
-                <a href="https://vipul-sureka.github.io/resume/Vipul_Sureka_Data_Analyst_5Years.pdf" target="_blank" class="px-8 py-3 glass-card text-white font-semibold rounded-lg hover:bg-white/10 transition-all border border-white/20">
-                    My Resume
-                </a>
-            </div>
+<section class="relative h-screen flex items-center justify-center px-4 sm:px-6 lg:px-8 overflow-hidden">
+    <div class="text-center max-w-4xl mx-auto z-10">
+
+        <!-- Availability Badge -->
+        <div class="inline-block mb-4 px-4 py-1 rounded-full glass-card border border-data-accent/30">
+            <span class="text-data-accent font-mono text-sm">
+                <i class="fas fa-circle text-[8px] animate-pulse mr-2"></i>
+                Available for new challenges
+            </span>
         </div>
+
+        <!-- Dynamic Heading -->
+        <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-6">
+            <span class="block mb-2">I’m</span>
+            <span
+                id="dynamic-text"
+                class="text-gradient inline-block min-h-[1.2em]"
+            ></span>
+        </h1>
+
+        <!-- Subtitle -->
+        <p class="mt-4 max-w-2xl mx-auto text-xl text-gray-300 font-light">
+            Turning Raw Data into Strategic Intelligence.
+        </p>
+
+        <!-- CTA Buttons -->
+        <div class="mt-10 flex justify-center gap-4">
+            <a href="#experience"
+               class="group relative px-8 py-3 bg-white text-black font-bold rounded-lg overflow-hidden transition-all hover:scale-105">
+                <div class="absolute inset-0 w-full h-full bg-gradient-to-r from-data-accent to-data-purple opacity-0 group-hover:opacity-100 transition-opacity duration-300"></div>
+                <span class="relative group-hover:text-white transition-colors">
+                    My Professional Journey
+                </span>
+            </a>
+
+            <a href="https://vipul-sureka.github.io/resume/Vipul_Sureka_Data_Analyst_5Years.pdf"
+               target="_blank"
+               class="px-8 py-3 glass-card text-white font-semibold rounded-lg hover:bg-white/10 transition-all border border-white/20">
+                My Resume
+            </a>
+        </div>
+    </div>
+
+
         
         <!-- Scroll Down Indicator -->
         <div class="absolute bottom-10 left-1/2 transform -translate-x-1/2 animate-bounce">
