--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
 
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
             background-color: #050505;
             color: #ffffff;
             overflow-x: hidden;
+            overflow-y: auto; /* IMPORTANT */
         }
 
         .glass-card {
@@ -83,7 +88,6 @@
             </span>
         </div>
 
-        <!-- DYNAMIC HEADING -->
         <h1 class="text-5xl md:text-7xl font-extrabold tracking-tight mb-6">
             <span class="block mb-2">I’m</span>
             <span id="dynamic-text" class="text-gradient inline-block min-h-[1.2em]"></span>
@@ -94,10 +98,10 @@
         </p>
 
         <div class="mt-10 flex justify-center gap-4">
-            <a href="#experience"
+            <a href="#about"
                class="group relative px-8 py-3 bg-white text-black font-bold rounded-lg overflow-hidden transition-all hover:scale-105">
                 <div class="absolute inset-0 bg-gradient-to-r from-data-accent to-data-purple opacity-0 group-hover:opacity-100 transition-opacity"></div>
-                <span class="relative group-hover:text-white">My Professional Journey</span>
+                <span class="relative group-hover:text-white">Explore More</span>
             </a>
 
             <a href="https://vipul-sureka.github.io/resume/Vipul_Sureka_Data_Analyst_5Years.pdf"
@@ -110,6 +114,18 @@
 
     <div class="absolute bottom-10 left-1/2 -translate-x-1/2 animate-bounce">
         <i class="fas fa-chevron-down text-gray-500 text-2xl"></i>
+    </div>
+</section>
+
+<!-- 👇 ADDITIONAL CONTENT (SCROLL ENABLED) -->
+<section id="about" class="min-h-screen py-20 px-6 bg-slate-900/60">
+    <div class="max-w-4xl mx-auto text-center">
+        <h2 class="text-3xl md:text-4xl font-bold mb-6">About Me</h2>
+        <p class="text-gray-300 leading-relaxed">
+            This section exists to confirm scrolling works.
+            You can now paste your full About, Skills, Experience,
+            and Contact sections here exactly as before.
+        </p>
     </div>
 </section>
 
@@ -139,8 +155,9 @@ document.addEventListener("DOMContentLoaded", () => {
 
         if (!isDeleting) {
             el.textContent = current.slice(0, ++charIndex);
-            if (charIndex === current.length)
+            if (charIndex === current.length) {
                 setTimeout(() => isDeleting = true, pauseAfterTyping);
+            }
         } else {
             el.textContent = current.slice(0, --charIndex);
             if (charIndex === 0) {
